# yds-charger

./: README.md
1.Hardware/: 器件采购指南.md  打样注意事项(必读).txt
1.Hardware/1.topBoard/: ActiveBOM_topBoard.html  BOM__topBoard.csv  PickAndPlace__topBoard.csv  SCH_YDS-Charger-Daughter-Board_2022-05-27.json
1.Hardware/2.bottomBoard/: ActiveBOM_bottomBoard.html  BOM_bottomBoard.csv  PickAndPlace_bottomBoard.csv  SCH_bottomBoard.json
3.Software/: UI界面.xmind
3.Software/yds_charger/: .gitignore  CMakeLists.txt  partitions.csv  sdkconfig
3.Software/yds_charger/components/adc_read/: CMakeLists.txt  adc_read.c
3.Software/yds_charger/components/led_strip/: led_strip_rmt_ws2812.c
3.Software/yds_charger/components/lis3dh/: CMakeLists.txt  Kconfig.projbuild  lis3dh.c
3.Software/yds_charger/components/ota/: CMakeLists.txt  ota.c
3.Software/yds_charger/components/ota/include/: ota.h
3.Software/yds_charger/components/sntp/: CMakeLists.txt  sntptime.c
3.Software/yds_charger/components/sw3526/: CMakeLists.txt  software_i2c.c  sw3526.c
3.Software/yds_charger/components/u8g2/: CMakeLists.txt  Kconfig.projbuild
3.Software/yds_charger/main/: CMakeLists.txt  idf_component.yml  main.c  menu.c  menu.h  task.c  task.h
3.Structure/: 铝壳2050.SLDPRT
3.Structure/otherModule/OLED/: OLED TFT 0.96 inch 64x128 monochrome.SLDPRT  OLED TFT 0.96 inch 64x128 monochrome.x_t  ~$OLED TFT 0.96 inch 64x128 monochrome.SLDPRT
4.Structure/bottomBoard/: 3D_2_PCB_Daughter-Board_2022-04-09_2022-04-09.step
4.Structure/otherModule/OLED/: OLED TFT 0.96 inch 64x128 monochrome.STEP
(+105 files in other folders)
